--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 # MNEMONIC
 MNEMONIC=zebra ...
+
+# PRIVATE_KEY
 PRIVATE_KEY=1f89448...
+
+# PUBLIC_KEY
 PUBLIC_KEY=0x2B02065...
 
 # Debug
 LOG_LEVEL='debug'
 
+# NODE_ENV
 NODE_ENV=development
